--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^2.1.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,14 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-
-    
   },
-  
   "engines": {
-  "node": "16.x"
-}
-
-
-  
+    "node": "16.x"
+  }
 }
